packages/nci-engine/tests/snapshots/snapshot_tests__rust_since-decl.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "since-decl",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "since-decl@1.0.0::I",
      "name": "I",
      "kind": 265,
      "kindName": "InterfaceDeclaration",
      "package": "since-decl",
      "filePath": "index.d.ts",
      "sourcePackageName": "since-decl",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "export interface I {}",
      "isTypeOnly": true,
      "symbolSpace": "type",
      "dependencies": [],
      "since": "2.0.0",
      "isInternal": false,
      "modifiers": [
        "export"
      ]
    },
    {
      "id": "since-decl@1.0.0::V",
      "name": "V",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "since-decl",
      "filePath": "index.d.ts",
      "sourcePackageName": "since-decl",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "index.d.ts",
      "signature": "declare const V: string",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "since": "2.1.0",
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    }
  ],
  "totalSymbols": 2,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
