packages/nci-engine/tests/snapshots/snapshot_tests__rust_string-exports.snap
---
source: packages/nci-engine/tests/snapshot_tests.rs
expression: "& rust_graph"
---
{
  "package": "string-exports-pkg",
  "version": "1.0.0",
  "symbols": [
    {
      "id": "string-exports-pkg@1.0.0::VERSION",
      "name": "VERSION",
      "kind": 244,
      "kindName": "VariableStatement",
      "package": "string-exports-pkg",
      "filePath": "lib/index.d.ts",
      "sourcePackageName": "string-exports-pkg",
      "sourcePackageVersion": "1.0.0",
      "sourceFilePath": "lib/index.d.ts",
      "signature": "declare const VERSION: string",
      "isTypeOnly": false,
      "symbolSpace": "value",
      "dependencies": [],
      "isInternal": false,
      "modifiers": [
        "declare",
        "export"
      ]
    }
  ],
  "totalSymbols": 1,
  "totalFiles": 1,
  "crawlDurationMs": 0,
  "buildDurationMs": 0
}
